<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest02Var05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="server">Server</string>
    <string name="server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="client">Client</string>
    <string name="command">Command</string>

</resources>
