<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest02var05.PracticalTest02Var05MainActivity" >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="25sp"
    android:textStyle="bold"
    android:text="@string/server" />
 
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">
 
    <ScrollView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">
 
      <EditText
        android:id="@+id/server_port_edit_text"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:hint="@string/server_port" />
 
    </ScrollView>
 
    <ScrollView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">
 
      <Button
        android:id="@+id/connect_button"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:text="@string/connect" />
 
    </ScrollView>
 
  </LinearLayout>
 
  <Space
    android:layout_width="wrap_content"
    android:layout_height="10dp" />
 
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="25sp"
    android:textStyle="bold"
    android:text="@string/client" />

  <EditText
      android:id="@+id/client_command"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/command" >

      <requestFocus />
  </EditText>

  <Button
      android:id="@+id/send_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="Send" />

  <EditText
      android:id="@+id/result"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10" />


</LinearLayout>
